[package]
name = "dissyssym"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "demo"
path = "src/demo.rs"

[[bin]]
name = "gentopology"
path = "src/gentopology.rs"

[[bin]]
name = "simulate"
path = "src/simulate.rs"

[[bin]]
name = "pathtime"
path = "src/pathtime.rs"

[dependencies]
dissyssym-lib = { path = "../dissyssym-lib" }
tokio = { version = "1.18.2", features = ["full"] }
rayon = "1.5.3"
rand = "0.8.5"
